[gd_scene load_steps=3 format=3 uid="uid://bxivi41m35cu4"]

[ext_resource type="Texture2D" uid="uid://b3jl2wu7ax78c" path="res://assets/icon.svg" id="1_3shnc"]
[ext_resource type="Script" uid="uid://cbfnip1xjrk0h" path="res://scenes/menus/level_select.gd" id="1_p0wlc"]

[node name="level_select" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p0wlc")

[node name="label_select" type="Label" parent="."]
layout_mode = 2
offset_left = 556.0
offset_top = 59.0
offset_right = 723.0
offset_bottom = 101.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Level select"
horizontal_alignment = 1
vertical_alignment = 1

[node name="level_row_0" type="HBoxContainer" parent="."]
layout_mode = 2
offset_top = 201.0
offset_right = 1280.0
offset_bottom = 356.0
theme_override_constants/separation = 40
alignment = 1

[node name="level_0" type="VBoxContainer" parent="level_row_0"]
layout_mode = 2

[node name="texture_rect" type="TextureRect" parent="level_row_0/level_0"]
layout_mode = 2
texture = ExtResource("1_3shnc")

[node name="label" type="Label" parent="level_row_0/level_0"]
layout_mode = 2
text = "Level 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="level_1" type="VBoxContainer" parent="level_row_0"]
layout_mode = 2

[node name="texture_rect" type="TextureRect" parent="level_row_0/level_1"]
layout_mode = 2
texture = ExtResource("1_3shnc")

[node name="label" type="Label" parent="level_row_0/level_1"]
layout_mode = 2
text = "Level 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="level_2" type="VBoxContainer" parent="level_row_0"]
layout_mode = 2

[node name="texture_rect" type="TextureRect" parent="level_row_0/level_2"]
layout_mode = 2
texture = ExtResource("1_3shnc")

[node name="label" type="Label" parent="level_row_0/level_2"]
layout_mode = 2
text = "Level 3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="level_3" type="VBoxContainer" parent="level_row_0"]
layout_mode = 2

[node name="texture_rect" type="TextureRect" parent="level_row_0/level_3"]
layout_mode = 2
texture = ExtResource("1_3shnc")

[node name="label" type="Label" parent="level_row_0/level_3"]
layout_mode = 2
text = "Level 4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="level_4" type="VBoxContainer" parent="level_row_0"]
layout_mode = 2

[node name="texture_rect" type="TextureRect" parent="level_row_0/level_4"]
layout_mode = 2
texture = ExtResource("1_3shnc")

[node name="label" type="Label" parent="level_row_0/level_4"]
layout_mode = 2
text = "Level 5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="level_row_1" type="HBoxContainer" parent="."]
layout_mode = 2
offset_top = 456.0
offset_right = 1280.0
offset_bottom = 611.0
theme_override_constants/separation = 40
alignment = 1

[node name="level_0" type="VBoxContainer" parent="level_row_1"]
layout_mode = 2

[node name="texture_rect" type="TextureRect" parent="level_row_1/level_0"]
layout_mode = 2
texture = ExtResource("1_3shnc")

[node name="label" type="Label" parent="level_row_1/level_0"]
layout_mode = 2
text = "Level 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="level_1" type="VBoxContainer" parent="level_row_1"]
layout_mode = 2

[node name="texture_rect" type="TextureRect" parent="level_row_1/level_1"]
layout_mode = 2
texture = ExtResource("1_3shnc")

[node name="label" type="Label" parent="level_row_1/level_1"]
layout_mode = 2
text = "Level 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="level_2" type="VBoxContainer" parent="level_row_1"]
layout_mode = 2

[node name="texture_rect" type="TextureRect" parent="level_row_1/level_2"]
layout_mode = 2
texture = ExtResource("1_3shnc")

[node name="label" type="Label" parent="level_row_1/level_2"]
layout_mode = 2
text = "Level 3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="level_3" type="VBoxContainer" parent="level_row_1"]
layout_mode = 2

[node name="texture_rect" type="TextureRect" parent="level_row_1/level_3"]
layout_mode = 2
texture = ExtResource("1_3shnc")

[node name="label" type="Label" parent="level_row_1/level_3"]
layout_mode = 2
text = "Level 4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="level_4" type="VBoxContainer" parent="level_row_1"]
layout_mode = 2

[node name="texture_rect" type="TextureRect" parent="level_row_1/level_4"]
layout_mode = 2
texture = ExtResource("1_3shnc")

[node name="label" type="Label" parent="level_row_1/level_4"]
layout_mode = 2
text = "Level 5"
horizontal_alignment = 1
vertical_alignment = 1
